--- a/.github/workflows/update_heatmap.yml
+++ b/.github/workflows/update_heatmap.yml
@@ -2,9 +2,8 @@ name: Update Crypto Heatmap
 
 on:
   schedule:
-    # Her 1 saatte bir çalışması için (UTC zaman dilimine göre)
-    - cron: '0 * * * *'
-  workflow_dispatch: # Manuel olarak başlatabilmen için buton ekler
+    - cron: '0 * * * *' # Her saat başı
+  workflow_dispatch: # Manuel çalıştırma butonu sağlar
 
 permissions:
   contents: write
@@ -12,28 +11,26 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install ccxt pandas numpy
 
       - name: Run analysis script
         run: python main.py
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add index.html
           git commit -m "Automated Data Update: $(date)" || echo "No changes to commit"
           git push
